fix instructions-icon, add flicker animation to it

--- a/src/styles/piano.css
+++ b/src/styles/piano.css
@@ -66,6 +66,7 @@ input[type=range]::-webkit-slider-thumb {
     position: absolute;
     margin-left: 142px;
     cursor: pointer;
+    animation: flicker 1.5s infinite alternate; 
     
 }
 #instructions-modal {
@@ -279,6 +280,23 @@ input[type=range]::-webkit-slider-thumb {
     margin-top: 14px;
     border: solid 3px;
     margin-right: 14px;
+}
+
+@keyframes flicker {
+  0%, 18%, 22%, 25%, 53%, 57%, 100% {
+    text-shadow:
+      0 0 4px #fff,
+      0 0 11px #fff,
+      0 0 19px #fff,
+      0 0 40px rgb(255, 0, 0),
+      0 0 80px rgb(255, 0, 0),
+      0 0 90px rgb(255, 0, 0),
+      0 0 100px rgb(255, 0, 0),
+      0 0 550px rgb(255, 0, 0);
+  }
+  20%, 24%, 55% {       
+    text-shadow: none;
+  }
 }
 
 
